[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/enemy/vision_area.gd" type="Script" id=1]
[ext_resource path="res://scripts/enemy/enemy_template.gd" type="Script" id=2]
[ext_resource path="res://scripts/enemy/enemy_texture.gd" type="Script" id=3]
[ext_resource path="res://scripts/enemy/enemy_hitbox.gd" type="Script" id=4]
[ext_resource path="res://scripts/enemy/enemy_attack_area.gd" type="Script" id=5]
[ext_resource path="res://scripts/enemy/drop_itens_dice.gd" type="Script" id=6]
[ext_resource path="res://scenes/enviroments/floating_text.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/enemy/enemy_bar.gd" type="Script" id=8]
[ext_resource path="res://assets/enemy/general/health_bar.png" type="Texture" id=9]
[ext_resource path="res://assets/enemy/general/enemy_health_bar_background.png" type="Texture" id=10]

[node name="EnemyTemplate" type="KinematicBody2D"]
collision_layer = 8
script = ExtResource( 2 )
speed = 80
gravity = 350
floating_text = ExtResource( 7 )

[node name="Texture" type="Sprite" parent="."]
script = ExtResource( 3 )
animation_player = NodePath("../AnimationPlayer")
enemy = NodePath("..")
attack_area = NodePath("../EnemyAttackArea/Collision")

[node name="Collision" type="CollisionShape2D" parent="."]

[node name="VisionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource( 1 )
enemy = NodePath("..")
texture = NodePath("../Texture")

[node name="Collision" type="CollisionShape2D" parent="VisionArea"]

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0
script = ExtResource( 4 )
enemy = NodePath("..")
enemy_bar = NodePath("../EnemyBar")

[node name="Collision" type="CollisionShape2D" parent="HitBox"]

[node name="Timer" type="Timer" parent="HitBox"]

[node name="EnemyAttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource( 5 )

[node name="Collision" type="CollisionShape2D" parent="EnemyAttackArea"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="FloorRay" type="RayCast2D" parent="."]

[node name="DropItensDice" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Default" type="Position2D" parent="."]

[node name="EnemyBar" type="Control" parent="."]
margin_left = -32.0
margin_top = -32.0
margin_right = -32.0
margin_bottom = -32.0
script = ExtResource( 8 )

[node name="BarBackground" type="TextureRect" parent="EnemyBar"]
margin_right = 64.0
margin_bottom = 17.0
texture = ExtResource( 10 )

[node name="HealthBar" type="TextureProgress" parent="EnemyBar/BarBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.0
margin_top = -1.5
margin_right = 28.0
margin_bottom = 0.5
value = 50.0
texture_progress = ExtResource( 9 )

[node name="Tween" type="Tween" parent="EnemyBar"]

[connection signal="body_entered" from="VisionArea" to="VisionArea" method="_on_VisionArea_body_entered"]
[connection signal="body_exited" from="VisionArea" to="VisionArea" method="_on_VisionArea_body_exited"]
[connection signal="area_entered" from="HitBox" to="HitBox" method="_on_HitBox_area_entered"]
[connection signal="timeout" from="HitBox/Timer" to="HitBox" method="_on_Timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="Texture" method="_on_AnimationPlayer_animation_finished"]
